feat: add ent orm with base users endpoint
