# controllers/user_controller.go
@@ -1,30 +1,61 @@
 package controllers
 
 import (
+	"context"
 	"errors"
 	"net/http"
 	"strconv"
 
+	"pioApi/config"
+	_ "pioApi/ent"
+	"pioApi/models"
+	services "pioApi/services"
+
 	"github.com/gin-gonic/gin"
 )
 
-type User struct {
-	Name string
+type userController struct {
+	service *services.UserService
 }
 
-type userController struct{}
-
 func NewUserController() *userController {
-	return &userController{}
+	return &userController{
+		service: nil,
+	}
+}
+
+func (uc *userController) SetService(service *services.UserService) {
+	uc.service = service
 }
 
 func (uc *userController) InitRoutes(r *gin.Engine) {
 	users := r.Group("/users")
 	{
-		users.GET(":id", uc.GetUser)
-		users.PATCH(":id", uc.UpdateUser)
-		users.DELETE(":id", uc.DeleteUser)
+		users.GET("/", uc.GetUsers)
+		users.GET("/:id", uc.GetUser)
+		users.POST("/register", uc.CreateUser)
+		users.PATCH("/:id", uc.UpdateUser)
+		users.DELETE("/:id", uc.DeleteUser)
 	}
+}
+
+// GetUsers returns list of users
+//
+//	@Summary		returns list of users
+//	@Description	returns list of all users in database
+//	@Tags			users
+//	@Produce		json
+//	@Success		200	{array}	ent.User
+//	@Router			/users/ [get]
+func (uc *userController) GetUsers(ctx *gin.Context) {
+	context := context.Background()
+
+	users, err := uc.service.GetUsers(context, config.DB)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	ctx.JSON(http.StatusOK, users)
 }
 
 // GetUser returns user with given id
@@ -49,6 +80,33 @@ func (uc *userController) GetUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, response)
 }
 
+// CreateUser returns user with given id
+//
+//	@Summary		returns user
+//	@Description	returns user with given id
+//	@Tags			users
+//	@Produce		plain
+//	@Param			id	path		int	true	"id of user"
+//	@Success		200	{string}	string
+//	@Router			/users/{id} [post]
+func (uc *userController) CreateUser(ctx *gin.Context) {
+	context := context.Background()
+	var user models.User
+
+	if err := ctx.ShouldBindJSON(&user); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	_, err := uc.service.CreateUser(user, context, config.DB)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, "User created successfully")
+}
+
 // DeleteUser deletes user
 //
 //	@Summary		Deletes user
@@ -69,7 +127,7 @@ func (uc *userController) DeleteUser(ctx *gin.Context) {
 //	@Tags			users
 //	@Accept			json
 //	@Produce		json
-//	@Param			user formData User true "user data"
+//	@Param			user formData string true "user data"
 //	@Success		200	{string}	string
 //	@Router			/users/{id} [patch]
 func (uc *userController) UpdateUser(ctx *gin.Context) {
