# ent/migrate/schema.go
@@ -1,0 +1,30 @@
+// Code generated by ent, DO NOT EDIT.
+
+package migrate
+
+import (
+	"entgo.io/ent/dialect/sql/schema"
+	"entgo.io/ent/schema/field"
+)
+
+var (
+	// UsersColumns holds the columns for the "users" table.
+	UsersColumns = []*schema.Column{
+		{Name: "oid", Type: field.TypeUUID},
+		{Name: "username", Type: field.TypeString, Unique: true, Size: 40},
+		{Name: "password", Type: field.TypeString, Size: 40},
+	}
+	// UsersTable holds the schema information for the "users" table.
+	UsersTable = &schema.Table{
+		Name:       "users",
+		Columns:    UsersColumns,
+		PrimaryKey: []*schema.Column{UsersColumns[0]},
+	}
+	// Tables holds all the tables in the schema.
+	Tables = []*schema.Table{
+		UsersTable,
+	}
+)
+
+func init() {
+}
